# pfe-project

./: .gitignore  AGENTS.md  DOCKER_ALL_IN_ONE.md  docker-compose.yml
AR-api/: .env.example  .gitignore  AGENTS.md  Dockerfile  FIX_PLAN.md  README.md  SENIOR_FIX_PLAN.md  alembic.ini  bitbucket-pipelines.yml  celerybeat-schedule  checkout.mmd  docker-compose.local.yml  requirements.txt  webhook_mock.py
agentic-helper/: .dockerignore  .env  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agentic-helper/agentic_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentic-helper/app/: main.py
agentic-helper/app/api/: chat.py  deps.py  rag.py  transcribe.py
agentic-helper/app/core/: chatbot_init.py  config.py  langsmith.py  qdrant.py
agentic-helper/app/db/: session.py
agentic-helper/app/models/: __init__.py  chat.py  knowledge.py
agentic-helper/app/schemas/: chat.py  rag.py
agentic-helper/app/services/: agent.py  chat.py  chat_history.py  chatbot_runtime.py  embeddings.py  llm.py  rag.py  video_search.py
agentic-helper/app/tools/: __init__.py  video_search.py
agentic-helper/data/knowledge/: bviral.txt
agentic-helper/data/prompts/: bviral_system_prompt.txt  interest_classifier_prompt.txt  interested_response_prompt.txt  not_interested_response_prompt.txt  rag_chunk_grading_prompt.txt  rag_classifier_prompt.txt  rag_query_rewrite_prompt.txt  router_prompt.txt  video_search_filter_extractor_prompt.txt  video_search_query_rewrite_prompt.txt  video_search_system_prompt.txt
agentic-helper/scripts/: ingest_qdrant_knowledge.py  push_langsmith_prompts.py
agentic-helper/tests/: test_api.py
authentic_rights_portal/: .env.example  .prettierignore  AGENTS.md  Dockerfile.dev  README.md  netlify.toml  (+3 more)
(+352 files in other folders)
